# concert-scraper

./: .gitignore  New_System_Workflow.md  README.md  concerts.db  requirements.txt
app/: auth.py  main.py  (+11 more)
ml/: README.md  pyproject.toml
ml/concert_scraper_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml/config/: workflow.yaml
ml/data/: README.md
ml/data/processed/: test.jsonl  train.jsonl  val.jsonl
ml/data/raw/: concerts.jsonl  labeled_examples.jsonl
ml/eval/: metrics_run_001.json
ml/eval/prompt_runs/: prompt_1.md  prompt_10.md  prompt_11.md  prompt_12.md  prompt_13.md  prompt_14.md  prompt_17.md  prompt_19.md  prompt_20.md  prompt_21.md  prompt_22.md  prompt_23.md  prompt_24.md  prompt_25.md  prompt_26.md  prompt_27.md  prompt_28.md  prompt_29.md  prompt_3.md  prompt_30.md  prompt_31.md  prompt_32.md  prompt_33.md  prompt_34.md  prompt_36.md  prompt_37.md  prompt_38.md  prompt_39.md  prompt_4.md  prompt_40.md  prompt_42.md  prompt_43.md  prompt_44.md  prompt_45.md  prompt_46.md  prompt_47.md  prompt_48.md  prompt_49.md  prompt_5.md  prompt_50.md
ml/models/: active
ml/models/production/: README.txt
ml/models/run_001/: model_config.json
ml/prompts/: system_labeler.md  user_label_template.md
ml/scripts/: build_labeling_tasks.py  common.py  deploy_production_model.py  evaluate_models.py  export_for_app.py  export_training_data.py  generate_llm_labeling_txt.py  infer_batch.py  ml_enricher.py  prepare_hf_dataset.py  render_prompts.py  score_prompt_outputs.py  split_data.py  train_from_llm_output.py  train_transformer_ner.py  validate_labels.py
(+9 files in other folders)
